--- a/trade_models.ipynb
+++ b/trade_models.ipynb
@@ -166,11 +166,26 @@
    "source": [
     "mov_to_pos = []\n",
     "for k in season_ratings:\n",
-    "    mov_to_pos += [(i,_[1]) for i,_ in enumerate(sorted(season_ratings[k],reverse=True))]\n",
+    "    mov_to_pos += [(i,_[1]) for i,_ in enumerate(sorted(season_ratings[k]))]\n",
     "arr = np.array(mov_to_pos)\n",
     "clf3 = sm.OLS(arr[:,0],sm.add_constant(arr[:,1])).fit()\n",
     "plt.scatter(arr[:,0],arr[:,1])\n",
     "clf3.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf3 = sm.Logit(arr[:,0]/29,sm.add_constant(arr[:,1])).fit()\n",
+    "\n",
+    "xp = np.linspace(-15,15)\n",
+    "yp = 1/(1+np.exp(0.0036 - 0.368*(xp)))\n",
+    "plt.plot(xp,29*yp)\n",
+    "\n",
+    "clf3.summary()\n"
    ]
   },
   {
@@ -272,7 +287,8 @@
     "def best_fit_func_exp(x):\n",
     "    return np.linalg.norm(( Xs @ np.exp(x[0]*np.arange(10))*x[1]-x[2] - ys))\n",
     "a,b = np.polyfit(np.arange(10),np.log(np.array(res.params[1:])),1)\n",
-    "res2 = opt.minimize(best_fit_func_exp,[a,np.exp(b),-125],method='Nelder-Mead')\n"
+    "res2 = opt.minimize(best_fit_func_exp,[a,np.exp(b),-125],method='Nelder-Mead')\n",
+    "print(res2.x)"
    ]
   },
   {
@@ -352,8 +368,8 @@
     "iv = [72.67,61.14,39.29, 4.27,1.03,0.80, 13.26,9.45,8.9]\n",
     "iv = [73.4, 59.3, 53.9, 36.7,  3.9,  2. , -0.8,  1.3, 11.7, 10.7, 13.7,\n",
     "        10.5]\n",
-    "iv = [ 7.32,  6.01,  5.42,  3.87,  3.95,  2.06, -0.92,  1.1 ,  1.25,\n",
-    "         1.13,  1.43,  1.04]\n",
+    "iv = [ 7.59,  6.1 ,  5.59,  4.18,  4.26,  2.09, -0.89,  1.03,  1.27,\n",
+    "         0.95,  1.47,  0.94]\n",
     "r2 = get_rating(iv)\n",
     "#plt.scatter(ys,r2[1],alpha=0.1,s=10)\n",
     "r2"
@@ -368,7 +384,7 @@
     "import scipy.optimize as opt\n",
     "import cma\n",
     "\n",
-    "es = cma.CMAEvolutionStrategy(iv, 0.1, {'tolx':1e-6,'tolfun':1e-6,'maxfevals':10})\n",
+    "es = cma.CMAEvolutionStrategy(iv, 0.02, {'tolx':1e-6,'tolfun':1e-6,'maxfevals':1})\n",
     "es.optimize(get_rating)"
    ]
   },
@@ -448,7 +464,7 @@
     "    for i in range(offset):\n",
     "        tot += (iv[offset+i])*(np.tanh((x-iv[i])/iv[2*offset+i])+1.0)\n",
     "    return tot\n",
-    "xp = np.linspace(25,90)\n",
+    "xp = np.linspace(20,90)\n",
     "yp = [get_mov(_) for _ in xp]\n",
     "plt.plot(xp,yp)\n",
     "plt.grid(True)\n",
@@ -531,7 +547,7 @@
     "import scipy.optimize as opt\n",
     "import cma\n",
     "\n",
-    "es = cma.CMAEvolutionStrategy(iv2, 0.05, {'tolx':1e-6,'tolfun':1e-6,'maxfevals':10})\n",
+    "es = cma.CMAEvolutionStrategy(iv2, 0.05, {'tolx':1e-6,'tolfun':1e-6,'maxfevals':1})\n",
     "es.optimize(get_rating2)"
    ]
   },
@@ -627,8 +643,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r_lvl = -1.44#iv2[NR+np.argmin(abs(iv2[:NR]*10 - RL))]\n",
-    "r_lvliv2 = r_lvl-iv2[-1]\n",
+    "r_lvl = -1.23#iv2[NR+np.argmin(abs(iv2[:NR]*10 - RL))]\n",
+    "r_lvliv2 = iv2[-1] - r_lvl\n",
     "r_lvliv2,r_lvl,iv2[-1]"
    ]
   },
@@ -639,7 +655,7 @@
    "outputs": [],
    "source": [
     "plt.style.use('fivethirtyeight')\n",
-    "plt.imshow(np.array(draft_value)-iv2[-1], aspect='auto',cmap='Greys_r',vmin=0,vmax=3)\n",
+    "plt.imshow(np.array(draft_value)-iv2[-1], aspect='auto',cmap='Greys_r')\n",
     "plt.xlabel('years since drafted')\n",
     "plt.ylabel('draft pick')\n",
     "plt.title('draft value')\n",
@@ -734,7 +750,7 @@
    "source": [
     "for i,x in enumerate(coeffs[::-1]):\n",
     "    #plt.figure()\n",
-    "    plt.plot( x[1]*np.exp(-x[0]*np.arange(61)**x[2]) - r_lvliv2,label='year {}'.format(5-i))\n",
+    "    plt.plot( x[1]*np.exp(-x[0]*np.arange(61)**x[2]) + r_lvliv2,label='year {}'.format(5-i))\n",
     "plt.legend()\n",
     "plt.plot([0,60],[0,0],c='k',lw=1.5,ls='--')\n",
     "plt.xlabel('draft pick')\n",
@@ -791,7 +807,8 @@
    "source": [
     "mov = {}\n",
     "for i in np.arange(101):\n",
-    "    mov[i] = get_mov(i)"
+    "    mov[i] = get_mov(i)\n",
+    "np.round(mov[int(round(RL))],2)"
    ]
   },
   {
@@ -852,6 +869,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ovr_salaries = defaultdict(list)\n",
+    "sal_ovrd = defaultdict(list)\n",
+    "for p,s in player_ratings:\n",
+    "    v = player_ratings[(p,s)]\n",
+    "    if (p,s) in contracts:\n",
+    "        c = contracts[(p,s)][0]\n",
+    "        ovr_salaries[v['ovr']].append(c)\n",
+    "        sal_ovrd[c].append(v['ovr'])\n",
+    "sal_ovr = np.array([[s,mov[round(np.mean(c))]-r_lvl] for s,c in sal_ovrd.items()])\n",
+    "sal_ovr[:,0]/=30000\n",
+    "\n",
+    "sO = sm.OLS(sal_ovr[:,1],sal_ovr[:,0]).fit()\n",
+    "plt.scatter(sal_ovr[:,0],sal_ovr[:,1])\n",
+    "plt.scatter(sal_ovr[:,0],sO.predict())\n",
+    "sA = sO.params[0]\n",
+    "sA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -874,6 +915,17 @@
     "                        ovr+=age_shift.get(age+j,max_shift)\n",
     "                    pars[i].append(mov[round(np.clip(ovr,0,100))])\n",
     "                    #print(i,pid,age,ovr)\n",
+    "                elif (pid,s) in contracts:\n",
+    "                    age = s-player_born[pid]\n",
+    "                    ovr = player_ratings[(pid,s)]['ovr']\n",
+    "                    for j in range(i):\n",
+    "                        ovr+=age_shift.get(age+j,max_shift)\n",
+    "                    mov_p = mov[round(np.clip(ovr,0,100))]\n",
+    "                    if mov_p > 0:\n",
+    "                        RESIGN_CHANCE = 0.85\n",
+    "                        est_con = min(1,mov_p/sA) * 90000 \n",
+    "                        tss[i] += est_con*RESIGN_CHANCE\n",
+    "                        pars[i].append(RESIGN_CHANCE*mov_p)  \n",
     "        for i in range(1,5):\n",
     "            dpicks = draft_picks[(tid,s+i)]\n",
     "            for p in dpicks:\n",
@@ -881,7 +933,7 @@
     "                for k,j in enumerate(range(i,5)):\n",
     "                    tss[j] += dsal\n",
     "                    x = coeffs[k]\n",
-    "                    pars[j].append(x[1]*np.exp(-x[0]*(p**x[2])))\n",
+    "                    pars[j].append(iv2[-1]+x[1]*np.exp(-x[0]*(p**x[2])))\n",
     "\n",
     "            #print(contracts[(pid,s)],(player_ratings[(pid,s)]['ovr']),)\n",
     "        for i in range(5):\n",
@@ -914,32 +966,6 @@
     "for i in range(5):\n",
     "    pred = sm.OLS(ys[i],sm.add_constant(Xs[i])).fit()\n",
     "    print(i,pred.rsquared,np.round(pred.params,2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "ovr_salaries = defaultdict(list)\n",
-    "sal_ovrd = defaultdict(list)\n",
-    "for p,s in player_ratings:\n",
-    "    v = player_ratings[(p,s)]\n",
-    "    if (p,s) in contracts:\n",
-    "        c = contracts[(p,s)][0]\n",
-    "        ovr_salaries[v['ovr']].append(c)\n",
-    "        sal_ovrd[c].append(v['ovr'])\n",
-    "sal_ovr = np.array([[s,mov[round(np.mean(c))]-r_lvl] for s,c in sal_ovrd.items()])\n",
-    "sal_ovr[:,0]/=30000\n",
-    "\n",
-    "sO = sm.OLS(sal_ovr[:,1],sal_ovr[:,0]).fit()\n",
-    "plt.scatter(sal_ovr[:,0],sal_ovr[:,1])\n",
-    "plt.scatter(sal_ovr[:,0],sO.predict())\n",
-    "sA = sO.params[0]\n",
-    "sA"
    ]
   },
   {
@@ -1002,14 +1028,14 @@
     "    v = np.array(Xs[i])\n",
     "    cap_space = np.maximum(90000-v[:,0],0)/90000\n",
     "    ot = 1.0/3.0\n",
-    "    mov_from_cap = (cap_space//ot)*(sA*1) + (cap_space%ot)*sA\n",
+    "    mov_from_cap = cap_space*sA\n",
     "    #pred_mov = v[:,1] + mov_from_cap\n",
     "    RV = np.array([v[:,1], mov_from_cap]).T\n",
-    "    if i==0:\n",
-    "        RV[:,1] *= 0\n",
-    "    if i== 4:\n",
-    "        RV[:,0] *= 0\n",
-    "    pred = sm.OLS(ys[i],sm.add_constant(RV)).fit()\n",
+    "    #if i==0:\n",
+    "    #    RV[:,1] *= 0\n",
+    "    #if i== 4:\n",
+    "    #    RV[:,0] *= 0\n",
+    "    pred = sm.RLM(ys[i],RV).fit()\n",
     "    print(i,\":\",np.round(pred.params,2),\",\")#,pred.rsquared)\n",
     "    yp[i] = pred.predict()\n",
     "    #print(i,mov_from_cap.mean(),v[:,1].mean())"
