--- a/trade_prototype.ipynb
+++ b/trade_prototype.ipynb
@@ -78,11 +78,11 @@
     "})\n",
     "\n",
     "\n",
-    "iv = np.array([73.2 , 60.1 , 54.2 , 38.7 ,  3.95,  2.06, -0.92,  1.1 , 12.5 ,\n",
-    "       11.3 , 14.3 , 10.4 ])\n",
+    "iv = np.array([75.9 , 61.  , 55.9 , 41.8 ,  4.26,  2.09, -0.89,  1.03, 12.7 ,\n",
+    "        9.5 , 14.7 ,  9.4 ])\n",
     "def get_mov(x):\n",
     "    offset = len(iv)//3\n",
-    "    tot = -2.96\n",
+    "    tot = -2.57\n",
     "    for i in range(offset):\n",
     "        tot += (iv[offset+i])*(np.tanh((x-iv[i])/iv[2*offset+i])+1.0)\n",
     "    return tot\n",
@@ -93,16 +93,21 @@
     "    o2m[i] = get_mov(i)\n",
     "\n",
     "# replacement level\n",
-    "r_lvl = -1.44\n",
+    "r_lvl = -1.23\n",
+    "\n",
+    "# draft model's baseline \n",
+    "draft_lvl = -1.24\n",
     "\n",
     "# salaries to mov\n",
-    "sA,sB = (3.412670359422221,0)\n",
+    "sA,sB = (3.09,0)\n",
+    "\n",
+    "# this is not just regression.. it's hand tuned\n",
     "player_vs_cap = {\n",
-    "0 : [-0.2,   1.01,  0.  ] ,\n",
-    "1 : [-1.06,  0.78,  1.07] ,\n",
-    "2 : [-2.19,  0.52,  0.82] ,\n",
-    "3 : [-2.75,  0.06,  0.52] ,\n",
-    "4 : [-3.88,  0.,    0.59] ,\n",
+    "0 : [0, 1.01, 0] ,\n",
+    "1 : [0, 0.80, 2.0] ,\n",
+    "2 : [0, 0.4,  1.0] ,\n",
+    "3 : [0, 0.2,  0.5 ] ,\n",
+    "4 : [0, 0.1,  0.1 ] ,\n",
     "\n",
     "}"
    ]
@@ -114,18 +119,17 @@
    "outputs": [],
    "source": [
     "team = { 'p' : [(22,66,22000,2),(22,66,22000,2),(22,66,22000,2),(22,66,22000,2)], #(age,ovr,salary,years_left)\n",
-    "         'd' : [(1,0,3),(2,0,3),(1,1,3),(2,1,3),(1,2,3),(2,2,3),(1,3,3),(2,3,3),(1,4,3),(2,4,3)] #(round,years_left,team_MOV)\n",
+    "         'd' : [(1, 0, 8.6),(1, 0, -5.35),(2,0,3),(1,1,3),(2,1,3),(1,2,3),(2,2,3),(1,3,3),(2,3,3),(1,4,3),(2,4,3)] #(round,years_left,team_MOV)\n",
     "       }\n",
     "def get_team_value(team,sCap=90000,maxS=30000,minS=750,FAKE_RESIGN=True):\n",
     "    sCapS = sCap/90000\n",
     "\n",
     "    # turn mov into draft pick and future mov\n",
-    "    m2pos = lambda x: int(round(np.clip(14.5000 +  -1.7672*x,0,29)))\n",
+    "    m2pos = lambda x: int(round(np.clip( 29/(1+np.exp(0.0036 - 0.368*(x))),0,29)))\n",
     "    m2next = lambda year,mov: [1,0.5,0.25,0.08,0.03][year]*mov \n",
     "\n",
     "    # turn draft picks into specific predictions\n",
     "    draft_picks = [ (yr,m2pos(m2next(yr,mov))+30*(rnd-1)) for rnd,yr,mov in team['d'] if yr < 5]\n",
-    "\n",
     "    # for this and the next 4 years\n",
     "    pars = defaultdict(list)\n",
     "    tss = defaultdict(int)\n",
@@ -139,7 +143,7 @@
     "                    ovr2+=age_shift.get(age+j,max_shift)\n",
     "                pars[i].append(o2m[round(np.clip(ovr2,0,100))])\n",
     "            elif FAKE_RESIGN:\n",
-    "                RESIGN_CHANCE = 0.5\n",
+    "                RESIGN_CHANCE = 0.85\n",
     "                ovr2=ovr\n",
     "                for j in range(i):\n",
     "                    ovr2+=age_shift.get(age+j,max_shift)\n",
@@ -154,7 +158,8 @@
     "                tss[i] += dsal\n",
     "                year_since_draft = i-(yr+1)\n",
     "                x = draft_pick_movs[year_since_draft]\n",
-    "                pars[i].append(x[1]*np.exp(-x[0]*(p**x[2])))\n",
+    "                pars[i].append(draft_lvl + x[1]*np.exp(-x[0]*(p**x[2])))\n",
+    "                #print(i, yr, p, pars[i][-1],dsal)\n",
     "\n",
     "    # add salaries and player values\n",
     "    pred_movs = []\n",
@@ -164,17 +169,18 @@
     "        if lp < 10:\n",
     "            play= play + (10-lp)*[r_lvl]\n",
     "        play = sorted(play,reverse=True)[:10]\n",
+    "        #        play = [r_lvl+(p-r_lvl)*np.exp(-0.17330874*i) for i,p in enumerate(sorted(play,reverse=True)[:10])]\n",
     "        play_s = sum(play)\n",
     "        salary_s = tss[i] + (10-lp)*minS\n",
     "        cap_space = np.maximum(sCap-salary_s,0)/sCap\n",
     "        ot = 1.0/3.0\n",
-    "        mov_from_cap = (cap_space//ot)*(sA) + (cap_space%ot)*sA\n",
+    "        mov_from_cap = cap_space*sA\n",
     "\n",
     "        x = player_vs_cap[i]\n",
     "        p_mov = x[0] + x[1]*play_s + x[2]*mov_from_cap\n",
     "        pred_movs.append(p_mov)\n",
     "        #if i == 0:\n",
-    "        #    print(play_s,x[2],mov_from_cap)\n",
+    "        #print(i,lp,x[1]*play_s,x[2]*mov_from_cap,tss[i],cap_space)\n",
     "\n",
     "\n",
     "    # turn mov into win probs\n",
@@ -237,9 +243,9 @@
     "        if ts['playoffs']:\n",
     "            continue\n",
     "        current_mov = 0\n",
-    "        gp = ts['gp']\n",
+    "        gp = ts['gp']+1e-9\n",
     "        gl = 82-gp+1e-9\n",
-    "        if season == ts['season'] and not ts['playoffs']:\n",
+    "        if season == ts['season'] and not ts['playoffs'] and ts['gp']>0:\n",
     "            mov = (ts['pts'] - ts['oppPts']) / ts['gp'];\n",
     "            current_mov = mov\n",
     "        estimated_mov = sum(sorted([o2m[_[1]]*(max(gl-i,0)/gl) for _,i in zip(team_players[tid],team_injuries[tid])])[-10:])\n",
@@ -283,6 +289,321 @@
     "for v,t in sorted(teams_vals)[::-1]:\n",
     "    print(round(100*v,2),t)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "deals = []\n",
+    "for i in range(1000):\n",
+    "    t1 = np.random.randint(30)\n",
+    "    t2 = np.random.randint(30)\n",
+    "    if t1 == t2:\n",
+    "        continue\n",
+    "    \n",
+    "    t1vo = get_team_value({'p':team_players[t1],'d':team_picks[t1]},sCap,maxS,minS)\n",
+    "    t2vo = get_team_value({'p':team_players[t2],'d':team_picks[t2]},sCap,maxS,minS)\n",
+    "    pn = np.random.randint(len(team_picks[t1]))\n",
+    "    picks = [_ for _ in team_picks[t1]]\n",
+    "    pick = picks[pn]        \n",
+    "    del picks[pn]\n",
+    "\n",
+    "    for pi in range(len(team_players[t2])):\n",
+    "        local_p = [_ for _ in team_players[t2]]\n",
+    "        player = local_p[pi]\n",
+    "        del local_p[pi]\n",
+    "        t1v = get_team_value({'p':team_players[t1] + [player],'d':picks},sCap,maxS,minS)\n",
+    "        t2v = get_team_value({'p':local_p,'d':team_picks[t2] + [pick]},sCap,maxS,minS)\n",
+    "        if t1v > t1vo and t2v > t2vo:\n",
+    "            val = min((t1v-t1vo),(t2v-t2vo))\n",
+    "            deals.append((val,team_names[t1],pick,team_names[t2],player))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted(deals,reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "deals = []\n",
+    "for i in range(1000):\n",
+    "    t1 = np.random.randint(30)\n",
+    "    t2 = np.random.randint(30)\n",
+    "    if t1 == t2:\n",
+    "        continue\n",
+    "    \n",
+    "    t1vo = get_team_value({'p':team_players[t1],'d':team_picks[t1]},sCap,maxS,minS)\n",
+    "    t2vo = get_team_value({'p':team_players[t2],'d':team_picks[t2]},sCap,maxS,minS)\n",
+    "    \n",
+    "    pn = np.random.randint(len(team_players[t1]))\n",
+    "    players1 = [_ for _ in team_players[t1]]\n",
+    "    pick = players1[pn]        \n",
+    "    del players1[pn]\n",
+    "\n",
+    "    for pi in range(len(team_players[t2])):\n",
+    "        local_p = [_ for _ in team_players[t2]]\n",
+    "        player = local_p[pi]\n",
+    "        del local_p[pi]\n",
+    "        t1v = get_team_value({'p':players1 + [player],'d':team_picks[t1]},sCap,maxS,minS)\n",
+    "        t2v = get_team_value({'p':local_p + [pick],'d':team_picks[t2]},sCap,maxS,minS)\n",
+    "        if t1v > t1vo and t2v > t2vo:\n",
+    "            val = (t1v-t1vo) + (t2v-t2vo)\n",
+    "            deals.append((val,team_names[t1],pick,team_names[t2],player))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for d in sorted(deals,reverse=True):\n",
+    "    if d[4][2]/d[2][2] < 1.25 and d[4][2]/d[2][2] > 1/1.25:\n",
+    "        print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "deals = set()\n",
+    "for i in range(1000):\n",
+    "    t1 = np.random.randint(30)\n",
+    "    t2 = np.random.randint(30)\n",
+    "    if t1 == t2:\n",
+    "        continue\n",
+    "    \n",
+    "    t1vo = get_team_value({'p':team_players[t1],'d':team_picks[t1]},sCap,maxS,minS)\n",
+    "    t2vo = get_team_value({'p':team_players[t2],'d':team_picks[t2]},sCap,maxS,minS)\n",
+    "    \n",
+    "    pn = np.random.randint(len(team_players[t1]))\n",
+    "    players1 = [_ for _ in team_players[t1]]\n",
+    "    pick = players1[pn]        \n",
+    "    del players1[pn]\n",
+    "\n",
+    "    for pi in range(len(team_players[t2])):\n",
+    "        local_p = [_ for _ in team_players[t2]]\n",
+    "        player = local_p[pi]\n",
+    "        del local_p[pi]\n",
+    "        if not (pick[2]/player[2] < 1.25 and pick[2]/player[2] > 1/1.25):\n",
+    "            continue\n",
+    "        for p2 in range(len(team_picks[t2])):\n",
+    "            local_picks = [_ for _ in team_picks[t2]]\n",
+    "            pick2 = local_picks[p2]       \n",
+    "            del local_picks[p2]\n",
+    "            t1v1 = get_team_value({'p':players1 + [player],'d':team_picks[t1]},sCap,maxS,minS)\n",
+    "\n",
+    "            t1v = get_team_value({'p':players1 + [player],'d':team_picks[t1] + [pick2]},sCap,maxS,minS)\n",
+    "            t2v = get_team_value({'p':local_p + [pick],'d':local_picks },sCap,maxS,minS)\n",
+    "            if t1v1 < t1vo and t1v > t1vo and t2v > t2vo:\n",
+    "                v1 = (t1v-t1vo)\n",
+    "                v2 = (t2v-t2vo)\n",
+    "                val = min( v1 , v2)\n",
+    "                deals.add((val,v1,v2,team_names[t1],pick,team_names[t2],player,pick2))\n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted(list(deals),reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_team_value({'p':local_p + [pick],'d':local_picks },sCap,maxS,minS,FAKE_RESIGN=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_team_value({'p':team_players[t2],'d':team_picks[t2]},sCap,maxS,minS,FAKE_RESIGN=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_test = {'d':team_picks[7],'p':team_players[7]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_team_value(team_test,sCap,maxS,minS,FAKE_RESIGN=True),get_team_value(team_test,sCap,maxS,minS,FAKE_RESIGN=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "team_test2 = {'d': [\n",
+    "  (2, 0, -5.418723344900641),\n",
+    "  (2, 0, 8.540340637164833),\n",
+    "  (1, 1, -5.418723344900641),\n",
+    "  (2, 1, -5.39282330007588),\n",
+    "  (2, 1, 3.853918443823184),\n",
+    "  (1, 2, -5.418723344900641),\n",
+    "  (2, 2, -5.418723344900641),\n",
+    "  (2, 2, -5.39282330007588),\n",
+    "  (1, 3, -5.418723344900641),\n",
+    "  (2, 3, -5.418723344900641),\n",
+    "  (2, 3, -7.864634755995118),\n",
+    "  (1, 4, -5.418723344900641),\n",
+    "  (2, 4, -5.418723344900641),\n",
+    "  (1, 5, -5.418723344900641),\n",
+    "  (2, 5, -5.418723344900641),\n",
+    "  (2, 5, -0.7486026698639017),\n",
+    "  (1, 6, -5.418723344900641),\n",
+    "  (2, 6, -5.418723344900641),\n",
+    "  (2, 6, -6.1728821801766705)],\n",
+    " 'p': [(31, 50, 13350, 2),\n",
+    "  (26, 58, 17500, 3),\n",
+    "  (32, 43, 19000, 0),\n",
+    "  (43, 36, 2500, 0),\n",
+    "  (25, 27, 1700, 1),\n",
+    "  (22, 31, 1550, 2),\n",
+    "  (23, 25, 950, 1),\n",
+    "  (21, 51, 4850, 3),\n",
+    "  (22, 56, 4250, 2),\n",
+    "  (22, 58, 6650, 2),\n",
+    "  (23, 52, 8050, 3),\n",
+    "  (23, 59, 4150, 1),\n",
+    "  (27, 39, 1500, 0),\n",
+    "  (26, 43, 2600, 0),\n",
+    "  (24, 47, 2350, 0),\n",
+    "  (25, 42, 1600, 0)]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_team_value(team_test2,sCap,maxS,minS,FAKE_RESIGN=True),get_team_value(team_test2,sCap,maxS,minS,FAKE_RESIGN=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
