--- a/trade_prototype.ipynb
+++ b/trade_prototype.ipynb
@@ -17,12 +17,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draft_pick_movs = [[0.36211491756677816, 1.3170180246826415, 0.651214291927777],\n",
-    " [0.2823684338888295, 1.85110557120951, 0.5950874564833337],\n",
-    " [0.23291861205436207, 2.4053508391966627, 0.5788155686897763],\n",
-    " [0.23259802980965155, 2.8807892108432966, 0.5309845200620787],\n",
-    " [0.21006429689361383, 3.2163877631533726, 0.5236513566775773]]\n",
-    "\n",
+    "draft_pick_movs = [[0.3168039389557453, 1.574755098232529, 0.32589820098092004],\n",
+    " [0.23883957736743322, 2.0968046894646135, 0.374370494214839],\n",
+    " [0.21266690327685983, 2.5720443379338835, 0.38216402058901616],\n",
+    " [0.21380969341129108, 3.114628052141879, 0.3770727648181905],\n",
+    " [0.19515017565571086, 3.4358999024102372, 0.3810417461556498]]\n",
     "age_shift ={19: 6.4,\n",
     " 20: 6.7,\n",
     " 21: 5.0,\n",
@@ -78,11 +77,11 @@
     "})\n",
     "\n",
     "\n",
-    "iv = np.array([75.9 , 61.  , 55.9 , 41.8 ,  4.26,  2.09, -0.89,  1.03, 12.7 ,\n",
-    "        9.5 , 14.7 ,  9.4 ])\n",
+    "iv = np.array([71.3, 6.65, 17.4])\n",
+    "\n",
     "def get_mov(x):\n",
     "    offset = len(iv)//3\n",
-    "    tot = -2.57\n",
+    "    tot = -1.977\n",
     "    for i in range(offset):\n",
     "        tot += (iv[offset+i])*(np.tanh((x-iv[i])/iv[2*offset+i])+1.0)\n",
     "    return tot\n",
@@ -93,23 +92,26 @@
     "    o2m[i] = get_mov(i)\n",
     "\n",
     "# replacement level\n",
-    "r_lvl = -1.23\n",
+    "r_lvl = -1.425\n",
     "\n",
-    "# draft model's baseline \n",
-    "draft_lvl = -1.24\n",
+    "# draft model's baseline. \n",
+    "# probably should always be above replacement\n",
+    "# not because they are, but because otherwise they're a pain\n",
+    "draft_lvl = o2m[0]\n",
     "\n",
     "# salaries to mov\n",
-    "sA,sB = (3.09,0)\n",
+    "sA,sB = (4.00,0)\n",
     "\n",
-    "# this is not just regression.. it's hand tuned\n",
+    "# expected mov, weight for players, weight for salary cap space\n",
     "player_vs_cap = {\n",
-    "0 : [0, 1.01, 0] ,\n",
-    "1 : [0, 0.80, 2.0] ,\n",
-    "2 : [0, 0.4,  1.0] ,\n",
-    "3 : [0, 0.2,  0.5 ] ,\n",
-    "4 : [0, 0.1,  0.1 ] ,\n",
+    "0 : [0, 1.0, 0] ,\n",
+    "1 : [0, 1.0, 0.9] ,\n",
+    "2 : [0, 1.0, 0.8] ,\n",
+    "3 : [0, 1.0, 0.6] ,\n",
+    "4 : [0, 1.0, 0.5] ,\n",
+    "}\n",
     "\n",
-    "}"
+    "RESIGN_CHANCE = 0.5\n"
    ]
   },
   {
@@ -143,13 +145,12 @@
     "                    ovr2+=age_shift.get(age+j,max_shift)\n",
     "                pars[i].append(o2m[round(np.clip(ovr2,0,100))])\n",
     "            elif FAKE_RESIGN:\n",
-    "                RESIGN_CHANCE = 0.85\n",
     "                ovr2=ovr\n",
     "                for j in range(i):\n",
     "                    ovr2+=age_shift.get(age+j,max_shift)\n",
     "                mov_p = o2m[round(np.clip(ovr2,0,100))]\n",
     "                if mov_p > 0: # resign positive MOV contributors\n",
-    "                    est_con = min(1,mov_p/sA) * maxS \n",
+    "                    est_con = min(1,(mov_p-r_lvl)/sA) * maxS \n",
     "                    tss[i] += est_con*RESIGN_CHANCE\n",
     "                    pars[i].append(RESIGN_CHANCE*mov_p)  \n",
     "        for yr,p in draft_picks:\n",
@@ -172,23 +173,25 @@
     "        #        play = [r_lvl+(p-r_lvl)*np.exp(-0.17330874*i) for i,p in enumerate(sorted(play,reverse=True)[:10])]\n",
     "        play_s = sum(play)\n",
     "        salary_s = tss[i] + (10-lp)*minS\n",
-    "        cap_space = np.maximum(sCap-salary_s,0)/sCap\n",
-    "        ot = 1.0/3.0\n",
+    "        cap_space = (1.0/3.0)*np.maximum(sCap-salary_s,0)/sCap\n",
     "        mov_from_cap = cap_space*sA\n",
     "\n",
     "        x = player_vs_cap[i]\n",
     "        p_mov = x[0] + x[1]*play_s + x[2]*mov_from_cap\n",
     "        pred_movs.append(p_mov)\n",
     "        #if i == 0:\n",
-    "        #print(i,lp,x[1]*play_s,x[2]*mov_from_cap,tss[i],cap_space)\n",
+    "        #print(i,lp,play_s,mov_from_cap)\n",
     "\n",
     "\n",
     "    # turn mov into win probs\n",
     "    cA,cB = 0.46421272651304596, -5.12021285460421\n",
+    "    # turn mov into 'make the finals'\n",
+    "    cA,cB = (0.42422076396359476, -3.94406073999211)\n",
+    "\n",
     "    win_p = [1.0/(1+np.exp(-mov*cA -cB)) for mov in pred_movs]\n",
     "\n",
     "    # discount factor for the future, more uncertainty, less sure reward\n",
-    "    value = [wp*(0.7**(i)) for i,wp in enumerate(win_p)]\n",
+    "    value = [wp*(0.8**(i)) for i,wp in enumerate(win_p)]\n",
     "    #print(np.round(pred_movs,1))\n",
     "    return sum(value)\n",
     "get_team_value(team,90000,750)"
@@ -367,7 +370,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "for d in sorted(deals,reverse=True):\n",
@@ -467,48 +472,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "team_test = {'d':team_picks[7],'p':team_players[7]}"
    ]
@@ -576,6 +539,95 @@
    "source": [
     "get_team_value(team_test2,sCap,maxS,minS,FAKE_RESIGN=True),get_team_value(team_test2,sCap,maxS,minS,FAKE_RESIGN=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_test = {'d':team_picks[2],'p':team_players[2]}\n",
+    "get_team_value(team_test,sCap,maxS,minS,FAKE_RESIGN=True),get_team_value(team_test,sCap,maxS,minS,FAKE_RESIGN=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_test2 = {'d': [(2, 0, 1.63714319636652),\n",
+    "  (2, 0, -0.541253135267356),\n",
+    "  (2, 1, 4.211933478418106),\n",
+    "  (1, 1, -6.1728821801766705),\n",
+    "  (1, 1, -3.690676899636947),\n",
+    "  (2, 1, -3.690676899636947),\n",
+    "  (1, 2, -6.1728821801766705),\n",
+    "  (2, 2, -6.1728821801766705),\n",
+    "  (2, 2, 6.384246070143772),\n",
+    "  (1, 3, -6.1728821801766705),\n",
+    "  (1, 5, -6.1728821801766705),\n",
+    "  (2, 5, -6.1728821801766705),\n",
+    "  (1, 6, -6.1728821801766705)],\n",
+    " 'p': [(24, 51, 4800, 2),\n",
+    "  (24, 55, 1650, 2),\n",
+    "  (25, 59, 29550, 3),\n",
+    "  (27, 22, 1650, 2),\n",
+    "  (21, 25, 3900, 3),\n",
+    "  (30, 59, 20200, 4),\n",
+    "  (30, 64, 38000, 4),\n",
+    "  (32, 68, 40250, 2),\n",
+    "  (26, 26, 1650, 2),\n",
+    "  (23, 46, 1800, 1),\n",
+    "  (27, 26, 100, 0),\n",
+    "  (20, 33, 1750, 3),\n",
+    "  (23, 38, 200, 0),\n",
+    "  (28, 38, 1850, 2),\n",
+    "  (23, 29, 1650, 2)]}\n",
+    "get_team_value(team_test2,sCap,maxS,minS,FAKE_RESIGN=True),get_team_value(team_test2,sCap,maxS,minS,FAKE_RESIGN=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
